src/style.css
:root {
    --primary-color: #FE5E87;
    --secondary-color: #fff;
    --tertiary-color: #F8F6FF;
    --text-color: #040009;
    --text-color-light: #6B7280;
    --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
    --heading-font-family: "Taviraj", serif;
    --default-font-family: "Poppins", sans-serif;
    }

html, body {
      overflow-x: hidden;
      margin: 0;
      padding: 0;
      }
  
body {
  max-width: 100%;
  height: auto;
}
  .navbar {
    font-family: var(--default-font-family);
    background-color: rgba(255,255,255, 0.2) !important;
    color: var(--text-color) !important;
  }
  .navbar-collapse {
    text-align: right;
    background-color: transparent !important;
  }

  .active {
    color: var(--primary-color) !important;
    text-decoration: underline !important;
  }

  .homepage-halfblock {
    width: 100% !important;
    height: 100% !important;
    background-color: var(--tertiary-color);
    text-align: center;
    padding-bottom: 50px;
  }

  .homepage-memoji {
  width: 202px;
  height: 100%;
  text-align: center;
  margin-top: 160px;
  background-color: var(--tertiary-color);
  }


  h1 {
    text-align: center;
    font-family: var(--heading-font-family);
    font-size: 32px;
    font-weight: 1;
    color: var(--text-color);
    line-height: 92px;
    }

  h2,
  h3 {
    text-align: center;
    font-family: var(--default-font-family);
  }
  
  strong {
    font-weight: bold;
  }
  
  h2 {
    font-size: 48px;
  }
  
  .homepage-container {
  width: 100%;
  height: 100%;
  }

  .homepage-paragraph {
    width: 592px;
    height: 128px;
    margin: auto;
  }


  .homepage-container h3 {
    font-size: 24px;
    opacity: 0.7;
    font-weight: 400;
    line-height: 32px;
    margin-top: 48px;
    margin-bottom: 48px;
    margin: auto;
    height: 128px;
  }

  .homepage-halfblock h3 {
    color: var(--text-color-light);
    line-height: 32px;
  }

  p, a {
    font-family: var(--default-font-family);
  }
  
  .navigation-links {
    display: flex;
    margin-top: 40px;
    justify-content: center;
  }
  
  .contact-button {
    background: var(--primary-color);
    box-shadow: var(--box-shadow);
    color: white;
  }
  

  /* button component*/
  .navigation-links a {
    font-size: 14px;
    line-height: 24px;
    border-radius: 8px;
    text-align: center;
    text-decoration: none;
    background: var(--primary-color);
    box-shadow: var(--box-shadow);
    color: white;
  }

  .homepage-projects-container {
   justify-content: center;
   padding: auto;
   margin: auto;
  }

  .homepage-projects-summary {
    text-align: center;
    justify-content: center;
    font-family: var(--default-font-family);
    margin: auto;
    margin-top: 115px;
  }

  .homepage-projects-summary p {
    margin-top: 16px;
    color: var(--text-color-light);
  }

  .homepage-projects-summary span {
    font-size: 36px;
    font-weight: bold;
    color: var(--text-color);
  }

  .homepage-projects-cards a, .about-section-content a {
    text-transform: capitalize;
    text-decoration: none;
  }

  .homepage-projects-cards {
    margin-top: 64px;
  }

  .homepage-projects-cards h5 {
    font-family: var(--default-font-family);
    font-weight: bold;
    font-size: 20px;
    padding: none;
    width: 205px;
  }
  
  .homepage-projects-cards a {
    text-align: right !important;
  }

  .card {
    height: 413px !important;
  }

  .homepage-projects-cards img, .homepage-projects-cards video {
    vertical-align: middle;
    margin: auto;
  }

  .worldClock-card {
    background-color: #6A57E3;
    color: #fff;
  }
  
  .worldClock-card a {
    color: #fff;
  }

  .weatherApp-card {
    background-color: #F0FB96;
  }

  .poemGenerator-card {
    background-color: #D6E9EB;
    color: var(--text-color);
  }

  .weatherApp-card a, .poemGenerator-card a {
  color: var(--text-color);
  }

  .contact-icons {
   margin-bottom: 50px;
  }

  .contact-icons h4 {
    font-size: 20px;
    font-weight: 500;
    font-family: var(--default-font-family);
    color:var(--primary-color);
    font-weight: 400;
    padding-top: 70px;
    padding-bottom: 15px !important;
  }

  .contact-icons a {
    text-align: center;
    margin: 0 10px;
    color: var(--text-color);
    font-size: 24px;
    text-decoration: none;
    padding: 10px 10px;
  }
  
  a:hover {
    cursor: pointer;
    opacity: 50%;
    transition: 100ms all;
  }
  
 footer {
    padding: 100px auto;
    font-size: 14px;
    text-align: center;
    margin: 80px auto 70px auto;
    background-color: transparent !important;
  }

  footer a {
    color: #FE5E87;
  }

  .about-container {
   margin-top: 150px !important;
   justify-content: center;
   }

 .about-container img {
  margin: auto;
  border-radius: 16px;
 }

 .about-button {
  font-size: 14px;
  width: 162px;
  height: 48px;
  line-height: 24px;
  border-radius: 8px;
  margin: 48px 430px 0 0;
  padding: 12px 10px 12px 10px;
  text-align: center;
  text-decoration: none;
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;

}

  .about-container h1 {
    font-size: 40px;
    line-height: 60px;
    color: var(--text-color);
  }

  .about-container h2 {
    font-size: 20px;
    color: var(--text-color-light);
  } 

  .about-container p {
    font-size: 16px;
    font-weight: normal;
    justify-content: flex-start !important;
    color: var(--text-color);

  }

  .projects-tab-container h1 {
    font-size: 48px;
    line-height: 60px;
    color: var(--text-color);
    font-family: var(--heading-font-family);
    font-weight: 200;
    text-align: center;
    padding-bottom: 70px;
  }

  .projects-vdg-block, .projects-wa-block, .projects-wca-block, .projects-pg-block, .projects-spell-wiz-block,
  .projects-iceland-block {
    padding: 100px 50px 50px 50px;
  }

  .projects-spell-wiz-block {
    background-color: var(--tertiary-color);
    vertical-align: middle;
  }

  .projects-iceland-block {
    background-color: #D6E9EB;
    vertical-align: middle;
  }

  
  .projects-vdg-block {
    background-color: #D6E9EB;
    vertical-align: middle;
  }

  .projects-wa-block {
    background-color:#F0FB96;
  }

  .projects-wca-block {
    background-color:#6A57E3;
    color: #fff;
  }

  .projects-pg-block {
    background-color: #F0FB96;
  }

  .projects-tab-container h3 {
    font-size: 48px;
    font-family: var(--heading-font-family);
    font-weight: bold;
    margin-bottom: 30px;
  }

  .projects-vdg-block h3, .projects-wa-block h3, .projects-pg-block h3, .projects-spell-wiz-block h3,
  .projects-iceland-block h3 {
    color: var(--text-color-light);
  }
  
  .projects-tab-container img, .projects-tab-container video {
    padding: 0 40px 0 40px;
    border-radius: 36px;
  }


  .projects-tab-container footer {
    background-color: #D6E9EB;
  }

  .contact-page-container {
    text-align: center;
    margin: auto;
  }

  .contact-page-container h1 {
    font-size: 68px;
    font-weight: bold;
    margin-bottom: 100px;
  }

  .contact-page-links a {
    color: #FE5E87;  
    font-size: 18px;
  }

  .contact-page-container h3 {
    margin-top: 50px;
  }

  .contact-page-memoji {
    width: 250px;
    height: 100%;
    text-align: center;
    margin-top: 160px;
    }

  @media (max-width: 900px) {
    h1 {
      font-size: 24px;
      line-height: 1.5;
    }
  
    h2 {
      font-size: 22px;
    }
  
    h3, p {
      font-size: 20px;
    }
  
    body {
      width: 100%;
      height: 100%;
    }

    .card {
      width: auto;
      height: auto;
      margin: auto;
      justify-content: center;
    }

    .col-sm-4 {
      display: block;
      width: auto;
      height: auto;
    }

    .homepage-paragraph {
      width: 366px;
      height: 160px;
    }

    .contact-page-memoji, .homepage-memoji {
      width: 25%;
      height: 25%;
    }

    .projects-tab-container h1 {
      font-size: 37px;
      text-align: center;
    }
  
    .projects-tab-container h3 {
      font-size: 25px;
    }

    .projects-tab-container p {
      font-size: 16px;
    }
  }

